[gd_scene load_steps=16 format=3 uid="uid://w7m6tehvvy3g"]

[ext_resource type="Script" uid="uid://bwb4bg70o281y" path="res://Scripts/Red.gd" id="1_qt7d6"]
[ext_resource type="Texture2D" uid="uid://b10fsskdsfwub" path="res://MainCharacter/Red/RedIdle1.png" id="2_ak25i"]
[ext_resource type="PackedScene" uid="uid://dvufcoyval3w2" path="res://MainCharacter/Red/bullet.tscn" id="2_khrlg"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="3_8vxmb"]
[ext_resource type="Texture2D" uid="uid://h3j5w0uff0qx" path="res://MainCharacter/Red/RedIdle2.png" id="3_fdt7q"]
[ext_resource type="Texture2D" uid="uid://cqpajeev7k1rx" path="res://MainCharacter/Red/RedJump.png" id="4_k7ict"]
[ext_resource type="Texture2D" uid="uid://qrdjfxsj1rys" path="res://MainCharacter/Red/Redwalk1.png" id="5_68wta"]
[ext_resource type="Texture2D" uid="uid://jcedlkmvbjwm" path="res://MainCharacter/Red/RedShoot1.png" id="5_xadcy"]
[ext_resource type="Texture2D" uid="uid://crwoar3qcr5gg" path="res://MainCharacter/Red/Redwalk2.png" id="6_b8ttq"]
[ext_resource type="Texture2D" uid="uid://d2dpyo4qn6isq" path="res://MainCharacter/Red/RedShoot2.png" id="6_khrlg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4nss6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ak25i")
}, {
"duration": 1.0,
"texture": ExtResource("3_fdt7q")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_k7ict")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xadcy")
}, {
"duration": 1.0,
"texture": ExtResource("6_khrlg")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_68wta")
}, {
"duration": 1.0,
"texture": ExtResource("6_b8ttq")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n4sts"]
radius = 24.0
height = 82.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvbjh"]
size = Vector2(58, 88.5)

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Red" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qt7d6")
double_jump = true
bullet_scene = ExtResource("2_khrlg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, 36)
limit_left = 0
limit_bottom = 705
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4nss6")
animation = &"Shoot"
frame_progress = 0.709125

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -3)
shape = SubResource("CapsuleShape2D_n4sts")

[node name="Collision" type="Area2D" parent="."]
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(-2, -2.25)
shape = SubResource("RectangleShape2D_tvbjh")

[node name="ParticleTrails" type="CPUParticles2D" parent="."]
position = Vector2(0, 42)
emitting = false
amount = 20
texture = ExtResource("3_8vxmb")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
